Fix: Article and homepage alignment using claude code 4

--- a/themes/alchemy/static/css/theme1.css
+++ b/themes/alchemy/static/css/theme1.css
@@ -97,6 +97,7 @@ p img {
   .teaser.row {
     margin-left: -15px;
     margin-right: -15px;
+    align-items: flex-start;
   }
 
   /* Align metadata flush left within its column */
@@ -107,6 +108,8 @@ p img {
   .teaser header ul {
     padding-left: 0;
     margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 
   /* Align title flush left within its column */
@@ -117,6 +120,8 @@ p img {
   .teaser .title {
     margin-left: 0;
     padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
   }
 }
 
